# RayTracer

./: CMakeLists.txt  README.md  RayTracer.sln
RayTracer/: RayTracer.vcxproj  RayTracer.vcxproj.filters  main.cpp
RayTracer/includes/: AABB.cpp  AABB.hpp  Camera.cpp  Camera.hpp  Hitable.cpp  Hitable.hpp  Ray.cpp  Ray.hpp  drand48.cpp  (+3 more)
outputs/: Hitable.ppm  Hitable_Diffuse.ppm  Hitable_antialiasing .ppm  Hitable_lambertian_metal_fuzz.ppm  Hitable_lambertian_metal_fuzz_delectric_on_macos_HighAA.ppm  Hitable_lambertian_metal_fuzz_dieletric_on_win32.ppm  Hitable_lambertian_metal_fuzz_dieletric_on_win32_HighAA.ppm  MacOS_PositionableCamera.ppm  MacOS_cornell_box_extrmely_high_AA.ppm  MacOS_cornell_box_final.ppm  MacOS_cornell_box_rotation_test.ppm  MacOS_final.ppm  MacOS_light_scene.ppm  MacOS_light_scene_emitted_4.0.ppm  MacOS_light_scene_emitted_4.0_farDistance.ppm  MacOS_multi_thread_high_AA&Resolution.ppm  MacOS_multi_thread_progress_bar_test.ppm  No_Intersect.ppm  Win32_DepthOfViewTest_low_aperture.ppm  Win32_PositionableCamera.ppm  Win32_cornell_box_with_mirror.ppm  Win32_emitted_1.0_4.0.ppm  Win32_emitted_2.0_4.0_error.ppm  Win32_emitted_4.0_4.0_error.ppm  Win32_emitted_final.ppm  Win32_multi_thread_cornell_box.ppm  Win32_multi_thread_cornell_box_final.ppm  Win32_multi_thread_cornell_box_final_ns12000.ppm  Win32_multi_thread_cornell_box_final_ns2000.ppm  Win32_multi_thread_cornell_box_final_ns500.ppm  Win32_multi_thread_cornell_box_final_ns6000.ppm  Win32_multi_thread_test.ppm  Win32_pure_cornell_box.ppm  output_p3.ppm  output_p6.ppm  pure_color_sphere.ppm
